changed the columns and did my readme page

--- a/about.html
+++ b/about.html
@@ -33,24 +33,21 @@
         <section>
             <div class="container">
                 <div class="row">
-                    <div class="column">
-                    <img src="img/aboutpic.jpg" alt="plant with seedling" width="450" height="300" ></div>
-                    <div>                
-                    <h1>Our Mission</h1>
-       
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim blandit volutpat maecenas volutpat blandit aliquam. In massa tempor nec feugiat nisl. Nulla pharetra diam sit amet nisl. Egestas congue quisque egestas diam in arcu cursus. Tellus elementum sagittis vitae et leo duis ut. Pellentesque id nibh tortor id. Netus et malesuada fames ac. Sit amet nisl suscipit adipiscing bibendum est. Viverra nam libero justo laoreet sit amet cursus sit amet. Rutrum tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Cras ornare arcu dui vivamus arcu felis bibendum. Pharetra convallis posuere morbi leo. Viverra aliquet eget sit amet tellus cras adipiscing enim eu.</p></div>
+                    <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">
+                        <img src="img/aboutpic.jpg" alt="plant with seedling" width="450" height="300" class="center-block">                
+                        <h1>Our Mission</h1>      
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim blandit volutpat maecenas volutpat blandit aliquam. In massa tempor nec feugiat nisl. Nulla pharetra diam sit amet nisl. Egestas congue quisque egestas diam in arcu cursus. Tellus elementum sagittis vitae et leo duis ut. Pellentesque id nibh tortor id. Netus et malesuada fames ac. Sit amet nisl suscipit adipiscing bibendum est. Viverra nam libero justo laoreet sit amet cursus sit amet. Rutrum tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Cras ornare arcu dui vivamus arcu felis bibendum. Pharetra convallis posuere morbi leo. Viverra aliquet eget sit amet tellus cras adipiscing enim eu.</p>
+                    </div>
                 </div>    
             </div>    
         </section><br>
         <section>
             <div class="container">
                 <div class="row">
-                    <div class="column"> 
-                    <h2>Our History</h2>
-       
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim blandit volutpat maecenas volutpat blandit aliquam. In massa tempor nec feugiat nisl. Nulla pharetra diam sit amet nisl. Egestas congue quisque egestas diam in arcu cursus. Tellus elementum sagittis vitae et leo duis ut. Pellentesque id nibh tortor id. Netus et malesuada fames ac. Sit amet nisl suscipit adipiscing bibendum est. Viverra nam libero justo laoreet sit amet cursus sit amet. Rutrum tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Cras ornare arcu dui vivamus arcu felis bibendum. Pharetra convallis posuere morbi leo. Viverra aliquet eget sit amet tellus cras adipiscing enim eu.</p></div>
-                    <div class="column"> 
-                        <img src="img/history.jpg" alt="the world's map" width="450" height="300">
+                    <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">
+                        <img src="img/history.jpg" alt="the world's map" width="450" height="300" class="center-block">
+                        <h2>Our History</h2>       
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim blandit volutpat maecenas volutpat blandit aliquam. In massa tempor nec feugiat nisl. Nulla pharetra diam sit amet nisl. Egestas congue quisque egestas diam in arcu cursus. Tellus elementum sagittis vitae et leo duis ut. Pellentesque id nibh tortor id. Netus et malesuada fames ac. Sit amet nisl suscipit adipiscing bibendum est. Viverra nam libero justo laoreet sit amet cursus sit amet. Rutrum tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Cras ornare arcu dui vivamus arcu felis bibendum. Pharetra convallis posuere morbi leo. Viverra aliquet eget sit amet tellus cras adipiscing enim eu.</p> 
                     </div>
                 </div>    
             </div>
@@ -58,15 +55,13 @@
         <section>
             <div class="container">
                 <div class="row">
-                    <div class="column">
-                        <img src="img/staff.jpg" alt="ladies sitting at the table" width="450" height="300">
-                    </div>
-                    <div class="column"> 
+                    <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">
+                        <img src="img/staff.jpg" alt="ladies sitting at the table" width="450" height="300" class="center-block">
                         <h2>Our Staff</h2>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim blandit volutpat maecenas volutpat blandit aliquam. In massa tempor nec feugiat nisl. Nulla pharetra diam sit amet nisl. Egestas congue quisque egestas diam in arcu cursus. Tellus elementum sagittis vitae et leo duis ut. Pellentesque id nibh tortor id. Netus et malesuada fames ac. Sit amet nisl suscipit adipiscing bibendum est. Viverra nam libero justo laoreet sit amet cursus sit amet. Rutrum tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Cras ornare arcu dui vivamus arcu felis bibendum. Pharetra convallis posuere morbi leo. Viverra aliquet eget sit amet tellus cras adipiscing enim eu.</p>
-                    </div>    
-                </div>        
-            </div>
+                    </div>
+                </div>    
+            </div>        
         </section>
         <footer>
             <div><br>
