--- a/showers.html
+++ b/showers.html
@@ -31,48 +31,41 @@
             </div>                   
         </nav>
         <section>
-        <div class="container"> 
-            <div class="row">
-                <div class="column"><br> 
-                <img src="img/Showers.jpg" alt="cupcakes on a platter" width="400" height="250"/></div>
-            
-            <div class="column">
-            <h3>Shower Services</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl condimentum id venenatis a condimentum vitae. Blandit cursus risus at ultrices mi. Enim sed faucibus turpis in eu. Diam quis enim lobortis scelerisque fermentum dui faucibus in. Sed adipiscing diam donec adipiscing. Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam. Vel pretium lectus quam id leo in. Est sit amet facilisis magna. Turpis egestas pretium aenean pharetra magna ac placerat vestibulum.</p></div>
-        </div>
-        </div>      
+            <div class="container"> 
+                <div class="row">
+                    <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12"> 
+                        <img src="img/Showers.jpg" alt="cupcakes on a platter" width="400" height="250" class="center-block">
+                            <h3>Shower Services</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl condimentum id venenatis a condimentum vitae. Blandit cursus risus at ultrices mi. Enim sed faucibus turpis in eu. Diam quis enim lobortis scelerisque fermentum dui faucibus in. Sed adipiscing diam donec adipiscing. Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam. Vel pretium lectus quam id leo in. Est sit amet facilisis magna. Turpis egestas pretium aenean pharetra magna ac placerat vestibulum.</p>
+                    </div>
+                </div>
+            </div>      
         </section><br>  
         <section> 
             <div class="container">   
                 <div class="row">
-                   <div class="column">
-                    <h3>Baby Showers</h3>
-                    <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl condimentum id venenatis a condimentum vitae. Blandit cursus risus at ultrices mi. Enim sed faucibus turpis in eu. Diam quis enim lobortis scelerisque fermentum dui faucibus in. Sed adipiscing diam donec adipiscing. Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam. Vel pretium lectus quam id leo in. Est sit amet facilisis magna. Turpis egestas pretium aenean pharetra magna ac placerat vestibulum.
-                <br><strong>starting at $400</strong>
-                
-                </p></div>
-                <div class="column">
-                    <img src="img/babypic.jpg" alt="cupcakes on the table" width="400" height="250">
+                    <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12"> 
+                        <img src="img/babypic.jpg" alt="cupcakes on the table" width="400" height="250" class="center-block">
+                        <h3>Baby Showers</h3>
+                        <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl condimentum id venenatis a condimentum vitae. Blandit cursus risus at ultrices mi. Enim sed faucibus turpis in eu. Diam quis enim lobortis scelerisque fermentum dui faucibus in. Sed adipiscing diam donec adipiscing. Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam. Vel pretium lectus quam id leo in. Est sit amet facilisis magna. Turpis egestas pretium aenean pharetra magna ac placerat vestibulum.
+                        <br><strong>starting at $400</strong>               
+                        </p>                               
+                    </div>
                 </div>
-              </div>
-           </div>
-        </div> 
+            </div> 
         </section><br>
         <section>
             <div class="container">
                 <div class="row">
-                    <div class="column">
-                        <img src="img/bridalpic.jpg" alt="a bridal shower cake" width="400" height="250">
-
-                    </div>
-                    <div class="column">
+                    <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12"> 
+                        <img src="img/bridalpic.jpg" alt="a bridal shower cake" width="400" height="250" class="center-block">
                         <h3>Bridal Showers</h3>
                         <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nisl condimentum id venenatis a condimentum vitae. Blandit cursus risus at ultrices mi. Enim sed faucibus turpis in eu. Diam quis enim lobortis scelerisque fermentum dui faucibus in. Sed adipiscing diam donec adipiscing. Feugiat pretium nibh ipsum consequat nisl vel pretium lectus quam. Vel pretium lectus quam id leo in. Est sit amet facilisis magna. Turpis egestas pretium aenean pharetra magna ac placerat vestibulum.
                         <br><strong>starting at $600</strong>
-
-                        </p></div>
+                        </p>
+                    </div>    
                 </div>
             </div>
         </section>  
