fixed the columns

--- a/birthday.html
+++ b/birthday.html
@@ -30,43 +30,29 @@
                 </ul>
             </div>                   
         </nav>
-        <section>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12"> 
-                        <img src="img/Birthday.jpg" alt="Birthday cake" width="450" height="300" class="center-block">                   
+                    <div class="col">
                         <h3>Birthday Services</h3>  
+                        <img src="img/Birthday.jpg" alt="Birthday cake" width="450" height="300" class="center-block">                    
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Metus dictum at tempor commodo ullamcorper a. Vivamus at augue eget arcu. Libero volutpat sed cras ornare arcu. Feugiat in ante metus dictum at. Lacus vel facilisis volutpat est velit. Nunc non blandit massa enim. Dignissim diam quis enim lobortis scelerisque fermentum dui. Venenatis lectus magna fringilla urna porttitor rhoncus dolor. Sit amet mauris commodo quis imperdiet massa tincidunt nunc. Enim blandit volutpat maecenas volutpat blandit aliquam etiam erat velit.</p>
-                    </div>
-                </div>
-            </div>    
-        </section><br>
-        <section> 
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12"> 
-                        <img src="img/fullday.jpg" alt="goodies table decor" width="450" height="300" class="center-block">
+                    </div> 
+                    <div class="col">
                         <h3>Full Day</h3>
+                        <img src="img/fullday.jpg" alt="goodies table decor" width="450" height="300" class="center-block">
                         <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Metus dictum at tempor commodo ullamcorper a. Vivamus at augue eget arcu. Libero volutpat sed cras ornare arcu. Feugiat in ante metus dictum at. Lacus vel facilisis volutpat est velit. Nunc non blandit massa enim. Dignissim diam quis enim lobortis scelerisque fermentum dui. Venenatis lectus magna fringilla urna porttitor rhoncus dolor. Sit amet mauris commodo quis imperdiet massa tincidunt nunc. Enim blandit volutpat maecenas volutpat blandit aliquam etiam erat velit.
                         </p><br><strong>starting at $500</strong>                    
                     </div>
-                </div>
-            </div> 
-        </section><br>
-        <section>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12"> 
+                    <div class="col">
+                        <h3>Half Day</h3> 
                         <img src="img/halfday.jpg" alt=" birthday balloons" width="450" height="300" class="center-block"> 
-                        <h3>Half Day</h3>
                         <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Metus dictum at tempor commodo ullamcorper a. Vivamus at augue eget arcu. Libero volutpat sed cras ornare arcu. Feugiat in ante metus dictum at. Lacus vel facilisis volutpat est velit. Nunc non blandit massa enim. Dignissim diam quis enim lobortis scelerisque fermentum dui. Venenatis lectus magna fringilla urna porttitor rhoncus dolor. Sit amet mauris commodo quis imperdiet massa tincidunt nunc. Enim blandit volutpat maecenas volutpat blandit aliquam etiam erat velit.
                         </p><br><strong>starting at $300</strong>
                     </div>     
                 </div>
-            </div>       
-        </section>    
+            </div>        
     </body>
     <footer>
         <div><br>
