--- a/about.html
+++ b/about.html
@@ -30,39 +30,25 @@
                 </ul>
             </div>                   
         </nav>
-        <section>
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">
-                        <img src="img/aboutpic.jpg" alt="plant with seedling" width="450" height="300" class="center-block">                
-                        <h1>Our Mission</h1>      
+                    <div class="col">
+                        <h1>Our Mission</h1>
+                        <img src="img/aboutpic.jpg" alt="plant with seedling" width="450" height="300" class="center-block">                      
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim blandit volutpat maecenas volutpat blandit aliquam. In massa tempor nec feugiat nisl. Nulla pharetra diam sit amet nisl. Egestas congue quisque egestas diam in arcu cursus. Tellus elementum sagittis vitae et leo duis ut. Pellentesque id nibh tortor id. Netus et malesuada fames ac. Sit amet nisl suscipit adipiscing bibendum est. Viverra nam libero justo laoreet sit amet cursus sit amet. Rutrum tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Cras ornare arcu dui vivamus arcu felis bibendum. Pharetra convallis posuere morbi leo. Viverra aliquet eget sit amet tellus cras adipiscing enim eu.</p>
                     </div>
-                </div>    
-            </div>    
-        </section><br>
-        <section>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">
-                        <img src="img/history.jpg" alt="the world's map" width="450" height="300" class="center-block">
-                        <h2>Our History</h2>       
+                    <div class="col">
+                        <h2>Our History</h2>
+                        <img src="img/history.jpg" alt="the world's map" width="450" height="300" class="center-block">       
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim blandit volutpat maecenas volutpat blandit aliquam. In massa tempor nec feugiat nisl. Nulla pharetra diam sit amet nisl. Egestas congue quisque egestas diam in arcu cursus. Tellus elementum sagittis vitae et leo duis ut. Pellentesque id nibh tortor id. Netus et malesuada fames ac. Sit amet nisl suscipit adipiscing bibendum est. Viverra nam libero justo laoreet sit amet cursus sit amet. Rutrum tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Cras ornare arcu dui vivamus arcu felis bibendum. Pharetra convallis posuere morbi leo. Viverra aliquet eget sit amet tellus cras adipiscing enim eu.</p> 
-                    </div>
-                </div>    
-            </div>
-        </section><br>
-        <section>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">
-                        <img src="img/staff.jpg" alt="ladies sitting at the table" width="450" height="300" class="center-block">
+                    </div>   
+                    <div class="col">
                         <h2>Our Staff</h2>
+                        <img src="img/staff.jpg" alt="ladies sitting at the table" width="450" height="300" class="center-block">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Enim blandit volutpat maecenas volutpat blandit aliquam. In massa tempor nec feugiat nisl. Nulla pharetra diam sit amet nisl. Egestas congue quisque egestas diam in arcu cursus. Tellus elementum sagittis vitae et leo duis ut. Pellentesque id nibh tortor id. Netus et malesuada fames ac. Sit amet nisl suscipit adipiscing bibendum est. Viverra nam libero justo laoreet sit amet cursus sit amet. Rutrum tellus pellentesque eu tincidunt tortor aliquam nulla facilisi cras. Cras ornare arcu dui vivamus arcu felis bibendum. Pharetra convallis posuere morbi leo. Viverra aliquet eget sit amet tellus cras adipiscing enim eu.</p>
                     </div>
                 </div>    
-            </div>        
-        </section>
+            </div>       
         <footer>
             <div><br>
               <p>&copy;2020 All Rights Reserved</p>
