--- a/wedding.html
+++ b/wedding.html
@@ -30,55 +30,34 @@
                 </ul>
             </div>                   
         </nav>
-        <section>
             <div class="container"> 
                 <div class="row">
-                    <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">     
-                        <img src="img/Wedding.jpg" alt="wedding venue" width="400" height="250" class="center-block">
-                        <h3>Wedding Services</h3>
-                        <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Gravida dictum fusce ut placerat orci nulla pellentesque dignissim. Duis ultricies lacus sed turpis tincidunt id. Lorem sed risus ultricies tristique nulla. Porttitor eget dolor morbi non arcu risus. In mollis nunc sed id semper risus in hendrerit. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend.
-                        </p> 
-                    </div>    
-                </div>    
-            </div>    
-        </section><br>              
-           
-        <section>
-            <div class="container"> 
-                <div class="row">
-                    <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">
-                        <img src="img/complan.jpg" alt="candles decor" width="400" height="250" class="center-block" >
+                    <div class="col">
+                            <h3>Wedding Services</h3>    
+                            <img src="img/Wedding.jpg" alt="wedding venue" width="400" height="250"> 
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Gravida dictum fusce ut placerat orci nulla pellentesque dignissim. Duis ultricies lacus sed turpis tincidunt id. Lorem sed risus ultricies tristique nulla. Porttitor eget dolor morbi non arcu risus. In mollis nunc sed id semper risus in hendrerit. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend.
+                            </p>    
+                    </div>                    
+                    <div class="col">
                         <h3>Complete Planning</h3>
+                        <img src="img/complan.jpg" alt="candles decor" width="400" height="250">
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Gravida dictum fusce ut placerat orci nulla pellentesque dignissim. Duis ultricies lacus sed turpis tincidunt id. Lorem sed risus ultricies tristique nulla. Porttitor eget dolor morbi non arcu risus. In mollis nunc sed id semper risus in hendrerit. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend.<br> <strong>starting at $4,000</strong></p>
-                    </div>     
-                </div>
-            </div>     
-        </section><br>
-        <section> 
-            <div class="container"> 
-                <div class="row">
-                    <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12"> 
-                        <img src="img/partplan.jpg" alt="boquet of flowers" width="400" height="450" class="center-block">                   
+                    </div>                   
+                    <div class="col">
                         <h3>Partial Planning</h3>
+                        <img src="img/partplan.jpg" alt="boquet of flowers" width="400" height="450">                  
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Gravida dictum fusce ut placerat orci nulla pellentesque dignissim. Duis ultricies lacus sed turpis tincidunt id. Lorem sed risus ultricies tristique nulla. Porttitor eget dolor morbi non arcu risus. In mollis nunc sed id semper risus in hendrerit. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend.<br><strong>starting at $2,000</strong></p>
                         
-                    </div>
-                </div>    
-            </div> 
-        </section><br>
-        <section>
-            <div class="container">  
-                <div class="row">
-                    <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12">  
-                            <img src="img/dayof.jpg" alt="bride" width="400" height="500" class="center-block" >
-                            <h3>Day-Of</h3>
+                    </div>               
+                    <div class="col">
+                            <h3>Day-Of</h3>  
+                            <img src="img/dayof.jpg" alt="bride" width="400" height="500">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Gravida dictum fusce ut placerat orci nulla pellentesque dignissim. Duis ultricies lacus sed turpis tincidunt id. Lorem sed risus ultricies tristique nulla. Porttitor eget dolor morbi non arcu risus. In mollis nunc sed id semper risus in hendrerit. Volutpat commodo sed egestas egestas fringilla phasellus faucibus scelerisque eleifend.<br><strong>starting at $1,500</strong></p>
-                        </div>
-                    </div>    
+                    </div> 
                 </div>
-            </div> 
-        </section>  
+            </div>    
+
         <footer>
             <div><br>
               <p>&copy;2020 All Rights Reserved</p>
